--- a/docs/report/screenshots.tex
+++ b/docs/report/screenshots.tex
@@ -31,7 +31,7 @@
 \begin{figure}[htb]
     \centering
     \includegraphics[width=\linewidth]{holiday.png}
-    \caption{You can even have notes with images and links}
+    \caption{Landing page on a holiday}
     \label{fig:holiday} % insert suitable label, this is used to refer to a fig from within the text as shown above
 \end{figure}
 
