--- a/docs/report/abstract.tex
+++ b/docs/report/abstract.tex
@@ -1,10 +1,6 @@
 \vspace{2in}
 
-\LARGE{\bfseries{Abstract}}
-
-\hspace{1in}
-
-\Large{\bfseries{About the project}}
+\centerline{\large{\bfseries{ABSTRACT}}}
 
 \hspace{1in}
 
@@ -26,13 +22,3 @@ Now, for students
 \item They can note down notes of each class and view them later
 \item They can catch up the upcoming events
 \end{itemize}
-
-\hspace{1in}
-
-\Large{\bfseries{Technology used}}
-
-\hspace{1in}
-
-\normalsize
-
-The project is meant to be developed on both web and mobile devices. The backend will be written in python 2 using the django framework and falcon for additional microservices. The frontend will be developed in web languages html, css and javascript. We will be using an SQL database to store and retrieve data essential for the project to function. All of the database interaction to the SQL server will be done through a python interface in order to go along with the other python components of the project.
