--- a/docs/report/certificate.tex
+++ b/docs/report/certificate.tex
@@ -1,30 +1,35 @@
+\begin{tikzpicture}[remember picture, overlay]
+  \draw[line width = 4pt] ($(current page.north west) + (0.5in,-0.5in)$) rectangle ($(current page.south east) + (-0.5in,0.5in)$);
+\end{tikzpicture}
+
 \topskip0pt
 \vspace*{\fill}
 
 \begin{center}
 
-\LARGE
+\large
 DIVISION OF COMPUTER ENGINEERING\\
 SCHOOL OF ENGINEERING\\
+
+\hspace{1em}
+
 COCHIN UNIVERSITY OF SCIENCE AND TECHNOLOGY\\
 
 \hspace{1em}
 
-\huge
-\emph{CERTIFICATE}
+\emph{\LARGE Certificate}
 
 \hspace{1em}
 
-\large
+\normalsize
 Certified that this is a bonafide record of the Minor Project titled
 
 \hspace{1em}
 
-\LARGE
-BRIDGE
+\Large{\bfseries{BRIDGE}}
 
-\large
-Student Self Management System
+\normalsize
+Student Self Monitoring System
 
 \hspace{1em}
 
@@ -32,18 +37,18 @@ done by
 
 \hspace{1em}
 
-\Large
+\large
 Abin Simon ( 12150005 )
 
-\Large
+\large
 Aayisha A A ( 12150076 )
 
-\Large
+\large
 Abhai Kollara ( 12150002 )
 
 \hspace{1em}
 
-\large
+\normalsize
 of VI Semester, Computer Science and Engineering in the year 2017 in partial fulfillment requirements for the award of degree of Bachelor of Technology in Computer Science and Engineering of Cochin University of Science and Technology.
 
 \hspace{1em}
