--- a/docs/report/cover.tex
+++ b/docs/report/cover.tex
@@ -2,21 +2,19 @@
 \vspace*{\fill}
 
 \begin{center}
-\LARGE
+\Large
 Mini Project Report
 
-\hspace{1em}
+\hspace{0.7em}
 
 on
 
-\hspace{1em}
+\hspace{0.7em}
 
-\huge
-BRIDGE
+\Large{\bfseries{BRIDGE}}
 
-\hspace{1em}
-\Large
-Student Self Management System
+\normalsize
+Student Self Monitoring System
 
 \hspace{1em}
 
@@ -24,30 +22,34 @@ submitted by
 
 \hspace{1em}
 
-\Large
+\large
 Abin Simon ( 12150005 )
 
-\Large
+\large
 Aayisha A A ( 12150076 )
 
-\Large
+\large
 Abhai Kollara ( 12150002 )
 
-\large
+\hspace{1em}
+
+\normalsize
 In partial fulfilment of the requirements for the award of degree of Bachelor of Technology in Computer Science and Engineering.
 
 \hspace{1em}
 
-\LARGE
+\large
 DIVISION OF COMPUTER ENGINEERING
 
 SCHOOL OF ENGINEERING
+
+\hspace{1em}
 
 COCHIN UNIVERSITY OF SCIENCE AND TECHNOLOGY
 
 \hspace{1em}
 
-\large
+\normalsize
 MARCH 2017
 \end{center}
 
