--- a/docs/report/decleration.tex
+++ b/docs/report/decleration.tex
@@ -1,11 +1,11 @@
 \vspace{2in}
 
-\LARGE{\bfseries{Decleration}}
+\centerline{\large{\bfseries{DECLERATION}}}
 
 \hspace{1in}
 
 \normalsize
-We, Miss Aayisha A A,Mr Abhai Kollara Dilip,Mr Abin Simon hereby declare that this project is the record of authentic work carried out by us during the academic year 2016 -2017 and has not been submitted to any other University or Institute towards the award of any degree.
+We, Miss Aayisha A A, Mr Abhai Kollara Dilip, Mr Abin Simon hereby declare that this project is the record of authentic work carried out by us during the academic year 2016 -2017 and has not been submitted to any other University or Institute towards the award of any degree.
 
 \vspace{5em}
 
